# aurora

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: codeql-analysis.yml
docs/: features.md  roadmap.md
src/: command.rs  commands.rs  lib.rs
src/commands/: config.rs  handlers.rs  plugin.rs
