[package]
name = "aurora"
version = "0.1.0"
edition = "2021"
authors = ["walleXD <6826840+walleXD@users.noreply.github.com>"]

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
confy = "0.4.0"
human-panic = "1.0.3"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
